--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-modules/__pycache__/
-utils/__pycache__/
+*/__pycache__/
 *.py[cod]
 *$py.class
 
